kubernetes/applications/ceph-storage/manifests/grafana/grafana-namespace.yml
# =====================================
# 0) Namespace
# =====================================
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
