kubernetes/applications/ceph-storage/manifests/grafana/grafana-app-service.yml
---
# =====================================
# 3) Service (ClusterIP)
# =====================================
apiVersion: v1
kind: Service
metadata:
  name: grafana-app
  namespace: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
